# ai-mock-interview

./: .env.example  .gitignore  README.md  agent.py  interview.py  pyproject.toml  requirements.txt
docs/: API_KEYS.md
frontend/: .env.example  README.md  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/api/token/: route.ts
tests/: test_state_machine.py
